--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,56 +1,49 @@
 version: "3"
 
-networks:
-  stack:
-
 services:
-  fluentd:
+  fluentd-collector:
+    image: fluentd
+    command:
+      - "-c"
+      - "/fluentd/etc/fluentd-collector.conf"
+    volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - /var/log:/var/log
+      - ${PWD}/configs:/fluentd/etc
+    depends_on:
+      - fluentd-aggregator
+
+  fluentd-aggregator:
     image: grafana/fluent-plugin-loki:master
     command:
       - "fluentd"
-      - "-v"
       - "-p"
       - "/fluentd/plugins"
-    environment:
-      LOKI_URL: http://loki:3100
-      LOKI_USERNAME:
-      LOKI_PASSWORD:
-    networks:
-      - stack
     volumes:
-      - /var/run/systemd/journal/:/var/run/systemd/journal/
-    logging:
-      options:
-         tag: infra.monitoring
-  
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - ${PWD}/configs/fluentd-aggregator.conf:/fluentd/etc/fluent.conf
+    depends_on:
+      - loki
+
   loki:
     image: grafana/loki:2.1.0
     command: -config.file=/etc/loki/config.yaml
-    networks:
-      - stack
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
       - ${PWD}/configs/loki-local-config.yaml:/etc/loki/config.yaml
     restart: always
     ports:
       - "3100:3100"
   
-  promtail:
-    image: grafana/promtail:2.1.0
-    volumes:
-      - /var/log:/var/log
-    command: -config.file=/etc/promtail/config.yml
-    depends_on:
-      - loki
-    networks:
-      - stack
-    ports:
-      - "9080:9080"
- 
   grafana:
     image: grafana/grafana:latest
+    volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     depends_on:
       - loki
     ports:
       - "3000:3000"
-    networks:
-      - stack
